# sentinel-tower

./: .cruft.json  .gitignore  AGENTS.md  QA.md  README.md  USER_STORIES.md  deploy.sh  deploy.sh.rej  engineering-standards.md  existing_metagraph_dashboard.json  noxfile.py  pyproject.toml  setup-prod.sh
.github/workflows/: cd.yml  ci.yml  cruft-updates.yml
app/envs/prod/: Dockerfile  block-scheduler-entrypoint.sh  celery-entrypoint.sh  dagster-entrypoint.sh  docker-entrypoint.sh  entrypoint.sh  gunicorn.conf.py  prometheus-cleanup.sh
app/src/: celery-entrypoint.sh  dagster.yaml  manage.py  pytest.ini  workspace.yaml
app/src/apps/extrinsics/: admin.py  apps.py  block_tasks.py  hyperparam_service.py  models.py  notifications.py  retention.py
app/src/apps/extrinsics/migrations/: 0001_initial.py  0002_rename_extrinsics_block_n_callf_idx_extrinsics_block_n_8a4c59_idx_and_more.py  0003_subnethyperparamhistory_subnethyperparam.py  0004_add_created_at_index.py  0005_add_block_timestamp_index.py  0006_rename_extrinsics_created_f0a498_idx_extrinsics_created_c6a814_idx_and_more.py  0007_drop_unused_indexes.py  0008_add_block_timestamp_brin_index.py  0009_subtensor_error_code.py  0010_seed_all_subtensor_error_codes.py  0011_add_call_lookup_indexes.py  0012_alter_subtensorerrorcode_id.py  0013_reseed_error_codes_from_runtime_424.py
app/src/apps/metagraph/: admin.py  apps.py  block_tasks.py  explorer.py  models.py  retention.py  tasks.py  utils.py  views.py
app/src/apps/metagraph/fixtures/: coldkey_labels.json  hotkey_labels.json
app/src/apps/metagraph/migrations/: 0001_initial.py  0002_create_validator_apy_materialized_view.py  0003_coldkey_label_hotkey_label.py  0004_add_dividend_apy_fields.py  0005_add_query_performance_indexes.py  0006_drop_validator_weekly_apy_view.py  0007_drop_unused_indexes.py  0008_create_validator_apy_windows_view.py  0009_add_apy_data_points.py  0010_create_subnet_validator_apy_epochs_view.py  0011_optimize_apy_refresh.py  0012_fix_epoch_apy_overflow_clamp.py  0012_neuronsnapshot_subnet_id.py  0013_fix_epoch_apy_overflow_clamp.py  0013_retention_block_indexes.py  0014_retention_miner_block_index.py
app/src/apps/metagraph/services/: apy_sync_service.py  coldkey_roles.py  key_cache.py  metagraph_service.py  metagraph_sync_service.py  relation_bulk_syncer.py  sync_service.py
app/src/apps/notifications/: __init__.py  admin.py  apps.py  base.py  channels.py  models.py  registry.py
app/src/apps/notifications/handlers/: __init__.py  admin_utils.py  coldkey_swap.py  subnet_dissolution.py  subnet_registration.py  sudo.py
app/src/apps/notifications/migrations/: 0001_initial.py
app/src/project/: celery.py  settings.py  urls.py
app/src/project/core/: admin.py  apps.py  block_tasks.py  business_metrics.py  metrics.py  models.py  notifications.py  retention.py  tasks.py  utils.py
app/src/project/core/migrations/: 0001_initial.py  0002_setweightsevent_events.py  0003_remove_hyperparamevent_core_hyperp_call_fu_ccbb3f_idx_and_more.py  0004_extrinsic.py  0005_auto_index_rename.py  0006_hyperparamevent_timestamp_setweightsevent_timestamp.py  0007_remove_hyperparamevent_setweightsevent.py  (+1 more)
app/src/project/dagster/: __init__.py  assets.py  definitions.py  jobs.py  resources.py
app/src/sentinel/: __init__.py  dto.py
app/src/sentinel/models/: block.py
app/src/sentinel/providers/: __init__.py  bittensor.py  turbobt.py
app/src/sentinel/services/: sentinel.py
app/src/tests/core/: test_retention.py
app/src/tests/e2e/: _helpers.py  conftest.py  test_backfill.py  test_extrinsic_ingestion.py  test_governance_notifications.py  test_metagraph_snapshots.py
app/src/tests/extrinsics/: test_block_tasks.py  test_retention.py
app/src/tests/factories/: metagraph.py
app/src/tests/metagraph/: test_admin.py  test_apy_epoch_view.py  test_metagraph_sync_service.py  test_neuron_snapshot_health_view.py  test_refresh_task.py  test_retention.py  test_snapshot_health_metrics.py  test_utils.py
app/src/tests/notifications/: conftest.py  test_base.py  test_channels.py  test_coldkey_swap.py  test_handlers.py  test_registry.py
app/src/tests/sentinel/: test_sentinel_block_ingestion.py
backups/: Dockerfile  supervisord.conf
db_access_certs/: .gitignore  README.md  init.sh  issue-client.sh  test-scripts.sh
devops/scripts/: vars.sh
devops/tf/core/: backend.tf  terraform.tfvars
devops/tf/main/files/: cloud-init.yml  docker-compose.yml  env
devops/vultr_tf/core/: main.tf  vultr-cloud-init.tftpl
docs/: README.md  README_AWS.md  apy-formula.md  postgres-mtls.md  todo.md
envs/dev/: .env.template  docker-compose.yml
envs/prod/: .env.template  docker-compose.yml
envs/prod/newrelic-infra/: newrelic-infra.dockerfile
envs/prod/nginx/: config_helpers  monitoring_certs  templates
envs/prod/nginx/templates/: default.conf.template
grafana/provisioning/alerting/: alert-rules.yml  contact-points.yml  notification-policies.yml
grafana/provisioning/dashboards/: backfilling.json  bittensor-metrics.json  chain-alerts.json  db-size.json  hyperparam-events.json  main.json  metagraph.json  subnet-apy.json  subnet-hyperparams.json  validator-apy.json  weight-setting.json
grafana/provisioning/datasources/: datasources.yml
nginx/: nginx.conf
nginx/stream.d/: postgres.conf
nginx/templates/: default.conf.template
prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
(+63 files in other folders)
