[project]
name = "sentinel_dumper"
requires-python = "==3.14.*"
version = "0"
dependencies = [
    "Django~=5.2.0",
    "django-constance~=4.3.4",
    "django-cors-headers~=4.9.0",
    "django-environ~=0.12.0",
    "django-extensions~=4.1",
    "django-probes~=1.8.0",
    "django-debug-toolbar~=6.2.0",
    "django-structlog[celery]~=10.0.0",
    "celery~=5.6.2",
    "flower~=2.0.1",
    "gunicorn~=25.0.3",
    "psycopg[binary]~=3.3.2",
    "redis~=7.1.1",
    "sentry-sdk~=2.52.0",
    "ipython~=9.10.0",
    "parso>=0.8.5",  # for python3.14 support
    "more-itertools~=10.8.0",
    "psutil~=7.2.2",
    "pydantic~=2.12.5",
    "prometheus-client @ git+https://github.com/reef-technologies/prometheus_client.git@77cda428598193698f53129d2311010d39ae8134",
    "django-prometheus~=2.4.1",
    "django-business-metrics>=1.0.1,<2",
    "whitenoise~=6.6.0",
    "abstract-block-dumper[prometheus]==0.1.6",
    "bittensor-sentinel[testing]==0.2.4",
    "dagster>=1.13.13",
    "dagster-webserver>=1.13.13",

    "bittensor-pylon-client>=1.8.0",
    "fsspec~=2026.1.0",
    "s3fs~=2026.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[dependency-groups]
test = [
    'pytest',
    'pytest-cov',
    'pytest-django',
    'pytest-xdist',
    'ipdb',
    'freezegun',
    'factory-boy',
]
lint = [
    "ruff",
    "codespell[toml]",
]
format = [
    "ruff",
]
type_check = [
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]",
    "mypy",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]

[tool.ruff]
src = ["app/src"]
line-length = 120

[tool.ruff.lint]
# TODO add D
select = [
    "E", "F", "I", "UP", "S",
    "TC005",
]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "S101", "S108", "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test*/**.py" = ["ANN201", "D", "F403", "F405", "S101", "S106", "S311"]

[tool.codespell]
skip = '*.min.js,*.lock,*/monitoring_certs/*,*/media/*'
ignore-words-list = 'datas,brin'

[tool.pyright]
reportIncompatibleVariableOverride = false

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.7.0",
    "idna>=3.15",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "project/settings.py",
    "project/asgi.py",
    "project/wsgi.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
